[gd_scene load_steps=14 format=2]

[ext_resource path="res://dudes/dude.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/units/Shade/red/run_right_0001.png" type="Texture" id=2]
[ext_resource path="res://assets/units/Shade/blue/run_right_0002.png" type="Texture" id=3]
[ext_resource path="res://assets/units/Shade/blue/run_right_0004.png" type="Texture" id=4]
[ext_resource path="res://assets/units/Shade/red/run_right_0002.png" type="Texture" id=5]
[ext_resource path="res://assets/units/Shade/blue/run_right_0003.png" type="Texture" id=6]
[ext_resource path="res://assets/units/Shade/red/run_right_0003.png" type="Texture" id=7]
[ext_resource path="res://assets/units/Shade/blue/run_right_0001.png" type="Texture" id=8]
[ext_resource path="res://assets/units/Shade/red/run_right_0004.png" type="Texture" id=9]
[ext_resource path="res://dudes/Shade/Shade.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 94.2603

[node name="Shade" instance=ExtResource( 1 )]
script = ExtResource( 10 )
movement_speed = 50
regular_sprites = SubResource( 2 )
enemy_sprites = SubResource( 3 )

[node name="AnimatedSprite" parent="." index="0"]
frame = 2

[node name="Timer" type="Timer" parent="." index="3"]
wait_time = 10.0

[node name="ShadowArea" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShadowArea" index="0"]
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="ShadowArea" to="." method="_on_ShadowArea_area_entered"]
[connection signal="area_exited" from="ShadowArea" to="." method="_on_ShadowArea_area_exited"]
